--- a/_includes/cs224n_demo.html
+++ b/_includes/cs224n_demo.html
@@ -1,3 +1,10 @@
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="custom.css">
+</head>
+
+
 
 <div style="padding-bottom: 0.5cm">
     <div class="card text-center bg-light">
