--- a/_includes/cs224n_demo.html
+++ b/_includes/cs224n_demo.html
@@ -5,12 +5,11 @@
 </head>
 
 
-
-<div style="padding-bottom: 0.1cm">
+<div style="padding-bottom: 0.5cm">
     <div class="card text-center bg-light">
         <div class="card-body">
             <input class="card-title form-control" type="text" id="input" name="input" placeholder="{{ include.placeholder }}"/>
-            <button class="card-text btn btn-outline-primary" id="btn">Find Entities</button>
+            <button class="card-text btn btn-outline-primary" id="btn">Check!</button>
             <div class="spinner" id="spinner" style="display: none">
               <div class="double-bounce1"></div>
               <div class="double-bounce2"></div>
@@ -24,7 +23,6 @@
         </div>
     </div>
 </div>
-
 
 
 <script type="text/javascript">
@@ -83,3 +81,4 @@
     });
 
 </script>
+
