--- a/_includes/cs224n_demo.html
+++ b/_includes/cs224n_demo.html
@@ -1,29 +1,33 @@
+
+
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="custom.css">
 </head>
 
-
-<div style="padding-bottom: 0.5cm">
-    <div class="card text-center bg-light">
-        <div class="card-body">
-            <input class="card-title form-control" type="text" id="input" name="input" placeholder="{{ include.placeholder }}"/>
-            <button class="card-text btn btn-outline-primary" id="btn">Check!</button>
-            <div class="spinner" id="spinner" style="display: none">
-              <div class="double-bounce1"></div>
-              <div class="double-bounce2"></div>
+<body>
+    <div class="container col-lg-6">
+        <div style="padding-bottom: 0.5cm">
+            <div class="card text-center bg-light">
+                <div class="card-body" style="padding-bottom: 0.2cm">
+                    <input class="card-title form-control" type="text" id="input" name="input" placeholder="{{ include.placeholder }}"/>
+                    <button class="card-text btn btn-outline-primary" id="btn">Check!</button>
+                    <div class="spinner" id="spinner" style="display: none">
+                      <div class="double-bounce1"></div>
+                      <div class="double-bounce2"></div>
+                    </div>
+                </div>
+                <div class="card-footer bg-white">
+                    <pre class="card-text api-pre" style="padding-bottom: 0.2cm">
+                        <div class="item" id="api_input"> {{ include.default_input }} </div>
+                        <div class="item" id="api_output"> {{ include.default_output }} </div>
+                    </pre>
+                </div>
             </div>
         </div>
-        <div class="card-footer bg-white">
-            <pre class="card-text api-pre" style="padding-bottom: 0.2cm">
-                <div class="item" id="api_input"> {{ include.default_input }} </div>
-                <div class="item" id="api_output"> {{ include.default_output }} </div>
-            </pre>
-        </div>
     </div>
-</div>
-
+</body>
 
 <script type="text/javascript">
     function api_call(input) {
@@ -66,7 +70,7 @@
     $( document ).ready(function() {
         // randomly request for everyone loading the page to keep api awake
         if ( Math.random() > 0.5 ) {
-            var input = "I love Paris";
+            var input = "I have the ball.";
             api_call(input);
             input = "";
         }
