--- a/_includes/cs224n_demo.html
+++ b/_includes/cs224n_demo.html
@@ -70,7 +70,7 @@
     $( document ).ready(function() {
         // randomly request for everyone loading the page to keep api awake
         if ( Math.random() > 0.5 ) {
-            var input = "I have the ball.";
+            var input = "London is a capital of Great Britain.";
             api_call(input);
             input = "";
         }
