--- a/_includes/custom.css
+++ b/_includes/custom.css
@@ -1,3 +1,147 @@
+body {
+  /* font-family: Helvetica, Arial, sans-serif; */
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 300;
+  background-color: #fdfdfd;
+
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  /*letter-spacing: normal;*/
+}
+
+.post {
+  padding-top: 30px;
+}
+
+.home-page-content {
+  padding-bottom: 20px;
+}
+
+.center-image
+{
+    margin: auto;
+    display: block;
+    max-width: 70%;
+}
+
+p {
+    text-align: justify;
+}
+
+li {
+    text-align: justify;
+}
+
+.title-wrapper {
+  text-align: center;
+}
+
+a.post-preview {
+  color: inherit;
+}
+
+a.post-preview:hover div.post-preview-title {
+  color: #B70B14;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+
+.post-preview-title {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.post-metadata {
+  display: inline-block;
+  float: left;
+  padding-top: 0.5em;
+  padding-right: 20px;
+  
+}
+
+.post-date {
+  padding-bottom: 5px;
+}
+
+.tags {
+  display: inline-block;
+}
+
+.tag {
+    color: rgba(0,0,0,0.67);
+    padding: 0.1em 0.5em;
+    margin: 0;
+    font-size: 80%;
+    border: 1px solid rgba(0,0,0,0.4);
+    border-radius: 5px;
+    margin-bottom: 5px;
+    display: inline-block;
+}
+
+@media(min-width: 768px) {
+  .post-metadata {
+    width: 15%;
+  }
+
+  .post-github {
+    float: right;
+  }
+}
+
+.post-description {
+  position: relative;
+  text-align: left;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.post-github {
+  background-color: #E1E4FF;
+  display: inline-block;
+  font-size: 80%;
+  margin-top: 10px;
+  padding: 0.1em 0.5em;
+  border-radius: 15px;
+  margin-bottom: 5px;
+  border: 1px solid rgba(0,0,0,0.4);
+}
+
+a.post-github {
+  color: inherit;
+}
+
+a.post-github:hover {
+  color: inherit;
+  background-color: #C7EEAA;
+  text-decoration: none;
+}
+
+.site-header {
+  background-color: #223141;
+}
+
+.site-title {
+  color: #FFF !important;
+  float: none;
+}
+
+.page-link {
+  color: #bbb !important;
+}
+
+.page-content {
+  flex: 1;
+}
+
+.site-footer {
+  background-color: #EEF1F5;
+}
+
+
 .api-pre {
     display: flex;
     flex-wrap: wrap;
