--- a/_includes/pdf.html
+++ b/_includes/pdf.html
@@ -1,5 +1,5 @@
-<object data="https://github.com/owoshch/owoshch.github.io/blob/master/images/fedor_kitashov_cv.pdf" type="application/pdf" width="700px" height="700px">
-    <embed src="https://github.com/owoshch/owoshch.github.io/blob/master/images/fedor_kitashov_cv.pdf">
-        This browser does not support PDFs. Please download the PDF to view it: <a href="https://github.com/owoshch/owoshch.github.io/blob/master/images/fedor_kitashov_cv.pdf">Download PDF</a>.</p>
+<object data="https://goo.gl/2MwYZN" type="application/pdf" width="700px" height="700px">
+    <embed src="https://goo.gl/2MwYZN">
+        This browser does not support PDFs. Please download the PDF to view it: <a href="https://goo.gl/2MwYZN">Download PDF</a>.</p>
     </embed>
 </object>
