--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/cv">cv</a>
+            <a href="{{ site.baseurl }}/writing/creation-of-a-landscape/">CV</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
